盛岡三大麺ページの作成
index.htmlに追記
men.html,men.css,
nakamura.html,nakamura.cssの作成
画像を追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>岩手観光</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="all-style.css">
@@ -23,7 +23,7 @@
       </div>
       <div class="titleb">
         <a class="kankoti">観光地</a>
-        <a class="men">盛岡三大麺</a>
+        <a class="men" href="men.html">盛岡三大麺</a>
         <a class="cyomei">著名人</a>
         <a class="movie">岩手が舞台の作品</a>
       </div>
@@ -82,7 +82,9 @@
 
     <div class="flex">
       <div class="writer-box gray">
-        <img class="writer-img" src="" alt="">
+        <a href="nakamura.html">
+          <img class="writer-img" src="img/nakamura_icon.png" alt="中村 伊吹">
+        </a>
         <p class="name">中村 伊吹</p>
 
       </div>
