--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="kankoti">観光地</a>
         <a class="men" href="men.html">盛岡三大麺</a>
         <a class="cyomei">著名人</a>
-        <a class="movie">岩手が舞台の作品</a>
+        <a class="movie" href="movie.html">岩手が舞台の作品</a>
       </div>
     </div>
   </header>
@@ -71,7 +71,9 @@
 
     <div class="flex">
       <div class="writer-box white">
-        <img class="writer-img" src="img/歩夢index画像.png" alt="">
+        <a href="writer.html">
+         <img class="writer-img" src="img/歩夢index画像.png" alt="佐藤 歩夢">
+        </a>
         <p class="name">佐藤 歩夢</p>
       </div>
       <div class="writer-box gray">
