--- a/jinn.html
+++ b/jinn.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon (1).ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="index-style.css">
+    <link rel="stylesheet" href="jinn-style.css">
+    <link rel="stylesheet" href="all-style.css">
     <title>岩手観光</title>
 </head>
 
