--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p class="name">佐藤 歩夢</p>
       </div>
       <div class="writer-box gray">
-        <img class="writer-img" src="" alt="">
+        <img class="writer-img" src="img/shum.icon.jpg" alt="北村 柊馬">
         <p class="name">北村 柊馬</p>
       </div>
     </div>
