パスの修正

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="head">
       <div class="titlea">
         <img class="titleimg" src="img/わんこ兄弟.png" alt="わんこ兄弟">
-        <a class="kanko">岩手観光</a>
-        <a class="writer">ライターページ</a>
+        <a class="kanko" href="index.html">岩手観光</a>
+        <a class="writer" href="index.html#writer">ライターページ</a>
       </div>
       <div class="titleb">
-        <a class="kankoti">観光地</a>
+        <a class="kankoti" href="tourist-spot.html">観光地</a>
         <a class="men" href="men.html">盛岡三大麺</a>
-        <a class="cyomei">著名人</a>
+        <a class="cyomei" href="jinn.html">著名人</a>
         <a class="movie" href="movie.html">岩手が舞台の作品</a>
       </div>
     </div>
@@ -65,14 +65,14 @@
       </div>
     </div>
 
-    <div class="writersyoukai2">
+    <div class="writersyoukai2" id="writer">
       <p class="writersyoukai">ライター紹介</p>
     </div>
 
     <div class="flex">
       <div class="writer-box white">
         <a href="writer.html">
-         <img class="writer-img" src="img/歩夢index画像.png" alt="佐藤 歩夢">
+          <img class="writer-img" src="img/歩夢index画像.png" alt="佐藤 歩夢">
         </a>
         <p class="name">佐藤 歩夢</p>
       </div>
