--- a/jinn.html
+++ b/jinn.html
@@ -16,10 +16,10 @@
             <div class="titlea">
                 <img class="titleimg" src="img/わんこ兄弟.png" alt="わんこ兄弟">
                 <a class="kanko" href="index.html">岩手観光</a>
-                <a class="raiter" href="index.html">ライターページ</a>
+                <a class="writer" href="index.html#writer">ライターページ</a>
             </div>
             <div class="titleb">
-                <a class="kankoti" href="kankoti.html">観光地</a>
+                <a class="kankoti" href="tourist-spot.html">観光地</a>
                 <a class="men" href="men.html">盛岡三大麺</a>
                 <a class="cyomei" href="jinn.html">著名人</a>
                 <a class="movie" href="movie.html">岩手が舞台の作品</a>
