--- a/sato-writer.html
+++ b/sato-writer.html
@@ -16,14 +16,14 @@
         <div class="head">
             <div class="titlea">
                 <img class="titleimg" src="img/わんこ兄弟.png" alt="わんこ兄弟">
-                <a class="kanko">岩手観光</a>
-                <a class="writer">ライターページ</a>
+                <a class="kanko" href="index.html">岩手観光</a>
+                <a class="writer" href="index.html#writer">ライターページ</a>
             </div>
             <div class="titleb">
-                <a class="kankoti">観光地</a>
-                <a class="men">盛岡三大麺</a>
-                <a class="cyomei">著名人</a>
-                <a class="movie">岩手が舞台の作品</a>
+                <a class="kankoti" href="tourist-spot.html">観光地</a>
+                <a class="men" href="men.html">盛岡三大麺</a>
+                <a class="cyomei" href="jinn.html">著名人</a>
+                <a class="movie" href="movie.html">岩手が舞台の作品</a>
             </div>
         </div>
     </header>
