全体の調整

--- a/jinn.html
+++ b/jinn.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon (1).ico">
+    <link rel="icon" href="img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="index-style.css">
-    <title>岩手観光</title>
+    <link rel="stylesheet" href="jinn-style.css">
+    <link rel="stylesheet" href="all-style.css">
+    <title>岩手の著名人</title>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
     <h3>岩手の著名人</h3>
     <table border="0">
         <tr class="jyunnki">
-            <td><img src="img/ダウンロード (4).jpg" width="256" height="350">
+            <td><img src="img/戸塚純貴.jpg" width="256" height="350">
 
             </td>
             <td>
@@ -38,7 +39,7 @@
             <td>
                 <h1 class="yoko">大谷翔平</h1>
             </td>
-            <td><img src="img/83f9fc3173e2153a0041dee284a057c5_1.jpg" width="256" height="350">
+            <td><img src="img/大谷翔平.jpg" width="256" height="350">
             </td>
         </tr>
         <tr>
@@ -55,7 +56,7 @@
             </td>
         </tr>
         <tr>
-            <td><img src="img/81306024019053.jpg" width="256" height="350">
+            <td><img src="img/宮沢賢治.jpg" width="256" height="350">
 
             </td>
             <td>
@@ -64,7 +65,7 @@
             <td>
                 <h1 class="yoko">芥見下々</h1>
             </td>
-            <td><img src="img/3807e37c-6cb5-4c97-9d82-c0f677b668dd.webp" width="256" height="350">
+            <td><img src="img/芥見下々.webp" width="256" height="350">
             </td>
         </tr>
         <tr>
