--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="all-style.css">
   <link rel="stylesheet" href="index-style.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
-  <link rel="icon" href="img/favicon (1).ico">
+  <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -77,7 +77,9 @@
         <p class="name">佐藤 歩夢</p>
       </div>
       <div class="writer-box gray">
-        <img class="writer-img" src="" alt="">
+        <a href="shuma.html">
+          <img class="writer-img" src="img/shum.icon.jpg" alt="北村 柊馬">
+        </a>
         <p class="name">北村 柊馬</p>
       </div>
     </div>
@@ -91,7 +93,9 @@
 
       </div>
       <div class="writer-box white">
-        <img class="writer-img" src="" alt="">
+        <a href="sato-writer.html">
+          <img class="writer-img" src="img/kahu.jpg" alt="佐藤 貴之">
+        </a>
         <p class="name">佐藤 貴之</p>
       </div>
     </div>
