--- a/movie.html
+++ b/movie.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>岩手が舞台の作品</title>
     <link rel="stylesheet" href="work-style.css">
+    <link rel="stylesheet" href="all-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/favicon (1).ico">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
