--- a/sato-writer.html
+++ b/sato-writer.html
@@ -6,9 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sato-style.css">
+    <link rel="stylesheet" href="all-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>佐藤貴之のライターページ</title>
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
