--- a/shuma.html
+++ b/shuma.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="raiter-style.css">
+    <title>北村柊馬のライターページ</title>
+    <link rel="stylesheet" href="shuma.css">
+    <link rel="stylesheet" href="all-style.css">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 <header>
     <div class="head">
