--- a/writer.html
+++ b/writer.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="writer-style.css">
     <link rel="stylesheet" href="all-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/favicon (1).ico">
+    <link rel="icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
